--- a/index.html
+++ b/index.html
@@ -5,77 +5,96 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
-	<header>
-		<div class="title">
-			<h1>ira vosorowa</h1>
-			<h3>graphic designer</h3>
-		<figure class="pic"> 
-			<img src="img/photo.png" alt="photo">
-		</figure>
-		</div>
-	</header>
-<div id="all">
-	<div class="contacts clearfix">
-			<div class="left">
-		<div class="gmail"> <img src="img/gmail.png" alt="gm" align="bottom"> i.vosorowa@gmail.com</div>
-			<div class="in">
-			<img src="img/in.png" alt="in"> behance.net/irusik </div>
-		</div>
-			<div class="right">
-				 <div class="bh">
-					<img src="img/behance.png" alt="bh"> linkedin.com/in/iravosorowa </div>
-				<div class="skype">
-					<img src="img/skype.png" alt="skype"> irusik.vos </div>
+	<body>
+		<header>
+			<div class="title">
+				<h1>ira vosorowa</h1>
+				<h3>graphic designer</h3>
+				<figure class="pic"> 
+					<img src="img/photo.png" alt="photo">
+				</figure>
+			</div>
+		</header>
+		<div id="all">
+			<div class="contacts clearfix">
+				<div class="left">
+					<div class="gmail"> 
+						<img src="img/gmail.png" alt="gm" align="bottom"> i.vosorowa@gmail.com
 					</div>
-	</div>
-	</div>
-	<hr color="#282626" size="4px">
-
-		<table width="1800px" height="570px">
-			<tr><th>
-			<div class="colr">
-				<div class="col">
-					<p>Education</p>
-					<img src="img/info.png" alt="info">
+					<div class="in">
+						<img src="img/in.png" alt="in"> behance.net/irusik 
+					</div>
 				</div>
-				<div class="experience">
-					<article>
-						<table><tr>
-							<td><div class="one">experience</div></td>
-					<td><img src="img/arrow1.png" alt="arrow"></td>
-					<td>
-					<div class="second">graphic designer<br> UI UX designer</div></td><td>
-					<img src="img/arrow1.png" alt="arrow"></td>
-					<td><div class="second">2.5 years</div> </td></tr></table>
-					<article>
+				<div class="right">
+				 	<div class="bh">
+						<img src="img/behance.png" alt="bh"> linkedin.com/in/iravosorowa 
+					</div>
+					<div class="skype">
+						<img src="img/skype.png" alt="skype"> irusik.vos 
+					</div>
 				</div>
-				<img src="img/itvdn.png" alt="exp">
-				</div></th>
-				<th>
-			<div class="center">
-				<p>about me</p>
-					<article>
-				Hi, I am a passionate, highly  enthusiastic  graphic/ui/ux designer. Have strong desire for  knowledge and challenges. Actively involved with the latest technology and updates in the web development field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile person.</article>
-					<h4>general info</h4>
-					<h6>Date of birth: 22 november 1989 <br>
-						location: Ukraine, Kiev <br>
-					mobile: (093)000-00-00</h6>
-			</div></th><th>
-			<div class="coll">
-			<p>Skills</p>
-			<img src="img/skills.png" alt="skills">
-			<p>hobbies</p>
-			<div id="pics">
-			<img src="img/bike.png" alt="bike">
-			<img src="img/music.png" alt="music">
-			<img src="img/chess.png" alt="chess">
-			<img src="img/drawing.png" alt="drawing"></div>
+			</div>
 		</div>
-		</th>>
-		<tr>
+		<hr color="#282626" size="4px">
+		<table class="colons">
+			<tr>
+				<th>
+					<div class="col">
+							<p>Education</p>
+							<img src="img/info.png" alt="info">
+						</div>
+						<div class="experience">
+						<table>
+							<tr>
+								<td>
+									<div class="one">experience</div>
+								</td>
+								<td>
+									<img src="img/arrow1.png" alt="arrow">	
+								</td>
+								<td>
+									<div class="second">graphic designer<br> UI UX designer
+									</div>
+								</td>
+								<td>
+									<img src="img/arrow1.png" alt="arrow">
+								</td>
+								<td>
+									<div class="second">2.5 years
+									</div>
+								</td>
+							</tr>
+						</table>
+						<img src="img/itvdn.png" alt="exp">
+					</div>
+				</th>
+				<th>
+					<div class="center">
+						<p>about me</p>
+						<article>
+							Hi, I am a passionate, highly  enthusiastic  graphic/ui/ux designer. Have strong desire for  knowledge and challenges. Actively involved with the latest technology and updates in the web development field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile person.
+						</article>
+							<h4>general info</h4>
+							<h6>Date of birth: 22 november 1989 <br>
+							location: Ukraine, Kiev <br>
+							mobile: (093)000-00-00
+							</h6>
+					</div>
+				</th>
+				<th>
+					<div class="coll">
+						<p>Skills</p>
+						<img src="img/skills.png" alt="skills">
+						<p>hobbies</p>
+						<div id="pics">
+							<img src="img/bike.png" alt="bike">
+							<img src="img/music.png" alt="music">
+							<img src="img/chess.png" alt="chess">
+							<img src="img/drawing.png" alt="drawing">
+						</div>
+					</div>
+				</th>
+			<tr>
 		</table>
-	
-
-</body>
+	</body>
 </html>
