fixed .contacs, add bootstrap

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 	<body>
@@ -15,86 +17,46 @@
 				</figure>
 			</div>
 		</header>
-		<div id="all">
-			<div class="contacts clearfix">
-				<div class="left">
-					<div class="gmail"> 
-						<img src="img/gmail.png" alt="gm" align="bottom"> i.vosorowa@gmail.com
-					</div>
-					<div class="in">
-						<img src="img/in.png" alt="in"> behance.net/irusik 
-					</div>
-				</div>
-				<div class="right">
-				 	<div class="bh">
-						<img src="img/behance.png" alt="bh"> linkedin.com/in/iravosorowa 
-					</div>
-					<div class="skype">
-						<img src="img/skype.png" alt="skype"> irusik.vos 
-					</div>
-				</div>
-			</div>
-		</div>
+<div class="contacs">
+	<div class="container-fluid">
+		  <div class="row justify-content-center">
+        <div class="col">
+                    <div class="row justify-content-end">
+              			   <div class="col-auto text-center">
+              				<img src="img/gmail.png" alt="gm" align="bottom"> i.vosorowa@gmail.com
+              					</div>
+                        <div class="col-auto text-right">
+                          <img src="img/behance.png" alt="bh"> /irusik
+                        </div>
+                    </div>
+        </div>
+        <div class="col-2 no-gutters"></div>
+        <div class="col">
+                  <div class="row justify-content-start">
+                    <div class="col-auto text-center"> 
+                       <img src="img/skype.png" alt="skype">
+                       irusik.vos
+                    </div>
+          			     <div class="col-auto text-center">
+                        <img src="img/in.png" alt="in">
+                        /in/iravosorowa
+                        
+                    </div>	
+                  </div> <!-- row -->
+        </div>
+      </div> <!-- row justify-content-between -->
+	</div><!-- container-fluid -->
+</div>
 		<hr color="#282626" size="4px">
-		<table class="colons">
-			<tr>
-				<th>
-					<div class="col">
-							<p>Education</p>
-							<img src="img/info.png" alt="info">
-						</div>
-						<div class="experience">
-						<table>
-							<tr>
-								<td>
-									<div class="one">experience</div>
-								</td>
-								<td>
-									<img src="img/arrow1.png" alt="arrow">	
-								</td>
-								<td>
-									<div class="second">graphic designer<br> UI UX designer
-									</div>
-								</td>
-								<td>
-									<img src="img/arrow1.png" alt="arrow">
-								</td>
-								<td>
-									<div class="second">2.5 years
-									</div>
-								</td>
-							</tr>
-						</table>
-						<img src="img/itvdn.png" alt="exp">
-					</div>
-				</th>
-				<th>
-					<div class="center">
-						<p>about me</p>
-						<article>
-							Hi, I am a passionate, highly  enthusiastic  graphic/ui/ux designer. Have strong desire for  knowledge and challenges. Actively involved with the latest technology and updates in the web development field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile person.
-						</article>
-							<h4>general info</h4>
-							<h6>Date of birth: 22 november 1989 <br>
-							location: Ukraine, Kiev <br>
-							mobile: (093)000-00-00
-							</h6>
-					</div>
-				</th>
-				<th>
-					<div class="coll">
-						<p>Skills</p>
-						<img src="img/skills.png" alt="skills">
-						<p>hobbies</p>
-						<div id="pics">
-							<img src="img/bike.png" alt="bike">
-							<img src="img/music.png" alt="music">
-							<img src="img/chess.png" alt="chess">
-							<img src="img/drawing.png" alt="drawing">
-						</div>
-					</div>
-				</th>
-			<tr>
-		</table>
+	
+
+
+
+
+
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  
 	</body>
 </html>
