--- a/index.html
+++ b/index.html
@@ -48,7 +48,54 @@
 	</div><!-- container-fluid -->
 </div>
 		<hr color="#282626" size="4px">
-	
+	<div class="allabout">
+		<div class="container-fluid">
+		<div class="row justify-content-center text-center">
+			<div class="col-sm-4">
+					<div id="education">
+						<p>Education</p>
+						<img src="img/info.png" alt="info">
+					</div>
+					<div id="experience">
+						<div class="exp">experience
+						<img src="img/arrow1.png" alt="arrow">
+						<div class="ui">graphic designer<br> UI UX designer
+						<img src="img/arrow1.png" alt="arrow">
+						2.5 years</div>
+					</div>
+					</div>
+					<img src="img/itvdn.png" alt="exp">
+			</div>
+			 <div class="col-sm-4">
+			 	<div id="center">
+				<p>about me</p>
+					<article>
+				Hi, I am a passionate, highly  enthusiastic  graphic/ui/ux designer. Have strong desire for  knowledge and challenges. Actively involved with the latest technology and updates in the web development field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile person.</article>
+					<h4>general info</h4>
+					<h6>Date of birth: 22 november 1989 <br>
+						location: Ukraine, Kiev <br>
+					mobile: (093)000-00-00</h6>
+				</div>
+			 </div>
+			 <div class="col-sm-4">
+			 	<div id="skills">
+			<p>Skills</p>
+			<img src="img/skills.png" alt="skills">
+			<p>hobbies</p>
+			<div id="pics">
+			<img src="img/bike.png" alt="bike">
+			<img src="img/music.png" alt="music">
+			<img src="img/chess.png" alt="chess">
+			<img src="img/drawing.png" alt="drawing"></div>
+		</div>
+			 </div> 
+			 </div>
+			</div><!-- row -->
+
+
+
+
+	</div><!-- allabout -->
 
 
 
