--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="container-fluid">
 		  <div class="row justify-content-center">
         <div class="col">
-                    <div class="row justify-content-end">
+                    <div class="row justify-content-around">
               			   <div class="col-auto text-center">
               				<img src="img/gmail.png" alt="gm" align="bottom"> i.vosorowa@gmail.com
               					</div>
@@ -32,7 +32,7 @@
         </div>
         <div class="col-2 no-gutters"></div>
         <div class="col">
-                  <div class="row justify-content-start">
+                  <div class="row justify-content-around">
                     <div class="col-auto text-center"> 
                        <img src="img/skype.png" alt="skype">
                        irusik.vos
@@ -50,25 +50,43 @@
 		<hr color="#282626" size="4px">
 	<div class="allabout">
 		<div class="container-fluid">
-		<div class="row justify-content-center text-center">
-			<div class="col-sm-4">
-					<div id="education">
-						<p>Education</p>
-						<img src="img/info.png" alt="info">
+		<div class="row justify-content-center">
+			<div class="col-sm-12 col-md-12 col-lg-4 text-center" >
+				<div class="row justify-content-center">
+					<div class="col-auto">
+						<div id="education">
+							<p>Education</p>
+							<img src="img/info.png" alt="info">
+						</div>
 					</div>
-					<div id="experience">
-						<div class="exp">experience
-						<img src="img/arrow1.png" alt="arrow">
-						<div class="ui">graphic designer<br> UI UX designer
-						<img src="img/arrow1.png" alt="arrow">
-						2.5 years</div>
+					<div class="w-100"></div>
+					<div class="col-auto">
+						<table class="experience"><tr>
+							<th>
+								<div class="exp">experience
+								</div>
+								<th><img src="img/arrow1.png" alt="arrow"></th>
+							</th>
+							<th>
+								<div class="ui">
+								graphic designer<br> UI UX designer
+							</th>
+							<th><img src="img/arrow1.png" alt="arrow"></th>
+							<th>
+								<div class="ui"> 2.5 years</div>
+							</th>
+						</tr></table>
 					</div>
+					<div class="w-100"></div>
+					<div class="col-auto">
+						<img src="img/itvdn.png" alt="exp">
 					</div>
-					<img src="img/itvdn.png" alt="exp">
+				</div>
 			</div>
-			 <div class="col-sm-4">
+			 <div class="col-sm-12 col-md-12 col-lg-3 text-center">
 			 	<div id="center">
 				<p>about me</p>
+				<img src="img/arrow.png" alt="arrow">
 					<article>
 				Hi, I am a passionate, highly  enthusiastic  graphic/ui/ux designer. Have strong desire for  knowledge and challenges. Actively involved with the latest technology and updates in the web development field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile person.</article>
 					<h4>general info</h4>
@@ -77,16 +95,28 @@
 					mobile: (093)000-00-00</h6>
 				</div>
 			 </div>
-			 <div class="col-sm-4">
-			 	<div id="skills">
-			<p>Skills</p>
-			<img src="img/skills.png" alt="skills">
-			<p>hobbies</p>
-			<div id="pics">
-			<img src="img/bike.png" alt="bike">
-			<img src="img/music.png" alt="music">
-			<img src="img/chess.png" alt="chess">
-			<img src="img/drawing.png" alt="drawing"></div>
+			 <div class="col-sm-12 col-md-12 col-lg-3  offset-lg-1"> 
+		<div class="row justify-content-left">
+			 <div class="col">	
+				<p>Skills</p>
+			</div>
+			<div class="w-100"></div>
+			<div class="col">
+				<img src="img/skills.png" alt="skills">
+			</div>
+			<div class="w-100"></div>
+			<div class="col">
+				<p>hobbies</p>
+			</div>
+			<div class="w-100"></div>
+			<div class="col">
+				<div id="pics">
+					<img src="img/bike.png" alt="bike">
+					<img src="img/music.png" alt="music">
+					<img src="img/chess.png" alt="chess">
+					<img src="img/drawing.png" alt="drawing">
+				</div>
+		</div>
 		</div>
 			 </div> 
 			 </div>
