remake skill bar

--- a/index.html
+++ b/index.html
@@ -102,7 +102,32 @@
 			</div>
 			<div class="w-100"></div>
 			<div class="col">
-				<img src="img/skills.png" alt="skills">
+				<table class="allskill">
+							<tr>
+								<th>
+									Adobe Photoshop	
+									<img src="img/adobe.png" alt=""><img src="img/ps.png">
+								</th>
+							</tr>
+							<tr>
+								<th>
+								Adobe Illustrator
+								<img src="img/ilust.png" alt=""><img src="img/ai.png">
+								</th>
+							</tr>
+							<tr>
+								<th>
+								Hand/Tablet Drawing
+								<img src="img/hand.png" alt=""><img src="img/pen.png">
+								</th>
+							</tr>
+							<tr>
+								<th>
+								UI/UX Design
+								<img src="img/bui.png" alt=""><img src="img/man.png">
+								</th>
+							</tr>
+						</table>
 			</div>
 			<div class="w-100"></div>
 			<div class="col">
