--- a/index.html
+++ b/index.html
@@ -21,148 +21,168 @@
 <div class="contacs">
 	<div class="container-fluid">
 		  <div class="row justify-content-center">
-        <div class="col">
-                    <div class="row justify-content-around">
-              			   <div class="col-auto text-center hvr-pulse">
+       			<div class="col">
+                	<div class="row justify-content-around">
+              			<div class="col-auto order-xl-1 order-md-2 text-center hvr-pulse">
               				<img src="img/gmail.png" alt="gm" align="bottom"> i.vosorowa@gmail.com
-              					</div>
-                        <div class="col-auto text-right hvr-pulse">
+              			</div>
+                        <div class="col-auto order-xl-2 text-right hvr-pulse">
                           <img src="img/behance.png" alt="bh"> /irusik
                         </div>
                     </div>
-        </div>
-        <div class="col-2 no-gutters"></div>
-        <div class="col">
-                  <div class="row justify-content-around">
-                    <div class="col-auto text-center hvr-pulse"> 
-                       <img src="img/skype.png" alt="skype">
-                       irusik.vos
-                    </div>
-          			     <div class="col-auto text-center hvr-pulse">
-                        <img src="img/in.png" alt="in">
-                        /in/iravosorowa
-                        
-                    </div>	
-                  </div> <!-- row -->
-        </div>
-      </div> <!-- row justify-content-between -->
-	</div><!-- container-fluid -->
-</div>
-		<hr color="#282626" size="4px">
+        		</div>
+        		<div class="col-2 no-gutters"></div>
+       			<div class="col">
+                  	<div class="row justify-content-around">
+                    	<div class="col-auto text-center hvr-pulse"> 
+                       		<img src="img/skype.png" alt="skype">
+                       			irusik.vos
+                    	</div>
+          			    <div class="col-auto text-center hvr-pulse">
+                        	<img src="img/in.png" alt="in">
+                        		/in/iravosorowa
+                        </div>	
+                  	</div>
+        		</div>
+      		</div> <!-- row justify-content-between -->
+		</div><!-- container-fluid -->
+	</div>
+<hr color="#282626" size="4px">
 	<div class="allabout">
 		<div class="container-fluid">
-		<div class="row justify-content-center">
-			<div class="col-sm-12 col-md-12 col-lg-4 text-center" >
-				<div class="row justify-content-center">
-					<div class="col-auto">
-						<div id="education">
-							<p>Education</p>
-							<img src="img/info.png" alt="info">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 order-xl-1" >
+					<div class="row justify-content-center">
+						<div class="col-lg-auto">
+							<div id="education">
+								<p>Education</p>
+								<img class="scaleimg" src="img/info.png" alt="info">
+							</div>
 						</div>
-					</div>
-					<div class="w-100"></div>
-					<div class="col-auto">
-						<table class="experience"><tr>
-							<th>
-								<div class="exp">experience
-								</div>
-								<th><img src="img/arrow1.png" alt="arrow"></th>
-							</th>
-							<th>
-								<div class="ui">
-								graphic designer<br> UI UX designer
-							</th>
-							<th><img src="img/arrow1.png" alt="arrow"></th>
-							<th>
-								<div class="ui"> 2.5 years</div>
-							</th>
-						</tr></table>
-					</div>
-					<div class="w-100"></div>
-					<div class="col-auto">
-						<img src="img/itvdn.png" alt="exp">
-					</div>
-				</div>
-			</div>
-			 <div class="col-sm-12 col-md-12 col-lg-3 text-center">
-			 	<div id="center">
-				<p>about me</p>
-				<img src="img/arrow.png" alt="arrow">
-					<article>
-				Hi, I am a passionate, highly  enthusiastic  graphic/ui/ux designer. Have strong desire for  knowledge and challenges. Actively involved with the latest technology and updates in the web development field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile person.</article>
-					<h4>general info</h4>
-					<h6>Date of birth: 22 november 1989 <br>
-						location: Ukraine, Kiev <br>
-					mobile: (093)000-00-00</h6>
-				</div>
-			 </div>
-			 <div class="col-sm-12 col-md-12 col-lg-3  offset-lg-1"> 
-		<div class="row justify-content-left">
-			 <div class="col">	
-				<p>Skills</p>
-			</div>
-			<div class="w-100"></div>
-			<div class="col">
-				<table class="allskill">
-							<tr>
-								<th>
-									Adobe Photoshop	
-									<div  class="skillbar" data-width="80" data-background="#08dbe3"></div></th><th><img src="img/ps.png">
-								</th>
-							</tr>
-							<tr>
-								<th>
-								Adobe Illustrator
-								<div  class="skillbar" data-width="70" data-background="#08dbe3"></div></th>
-								<th><img src="img/ai.png">
-								</th>
-							</tr>
-							<tr>
-								<th>
-								Hand/Tablet Drawing
-								<div  class="skillbar" data-width="90" data-background="#08dbe3"></th><th><img src="img/pen.png">
-								</th>
-							</tr>
-							<tr>
-								<th>
-								Lying about skills<br>
-								<div  class="skillbar" data-width="100" data-background="#08dbe3"></div></th><th><img src="img/man.png">
-								</th>
-							</tr>
-						</table>
-			</div>
-			<div class="w-100"></div>
-			<div class="col">
-				<p>hobbies</p>
-			</div>
-			<div class="w-100"></div>
-			<div class="col">
-				<div class="pics">
-					<img src="img/bike.png" alt="bike" class="hvr-push">
-					<img src="img/music.png" alt="music" class="hvr-push">
-					<img src="img/chess.png" alt="chess" class="hvr-push">
-					<img src="img/drawing.png" alt="drawing" class="hvr-push">
-				</div>
-		</div>
-		</div>
-			 </div> 
-			 </div>
-			</div><!-- row -->
-
-
-
-
+						<div class="w-100"></div>
+						<div class="col-xl-12 col-lg-auto">
+							<table class="experience">
+								<tr>
+									<th>
+										<div class="exp">experience
+										</div>
+									</th>
+									<th>
+										<img src="img/arrow1.png" alt="arrow">
+									</th>
+									<th>
+										<div class="ui">
+											graphic designer<br> UI UX designer
+									</th>
+									<th>
+										<img src="img/arrow1.png" alt="arrow">
+									</th>
+									<th>
+										<div class="ui"> 2.5 years</div>
+									</th>
+								</tr>
+							</table>
+						</div>
+						<div class="w-100"></div>
+						<div class="col-auto">
+							<img src="img/itvdn.png" alt="exp">
+						</div>
+					</div><!--  row justify-content-center -->
+				</div> <!-- end of the col -->
+			 	<div class="col-sm-12 col-md-12 col-lg-12  col-xl-4 text-center order-sm-first order-xl-2" >
+			 		<div id="center">
+						<p>about me</p>
+						<img src="img/arrow.png" alt="arrow">
+						<article>
+							Hi, I am a passionate, highly  enthusiastic  graphic/ui/ux designer. Have strong desire for  knowledge and challenges. Actively involved with the latest technology and updates in the web development field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile person.
+						</article>
+						<h4>general info</h4>
+						<h6>Date of birth: 22 november 1989 <br>
+							location: Ukraine, Kiev <br>
+							mobile: (093)000-00-00
+						</h6>
+					</div> <!-- id center -->
+			 	</div><!-- end of the col -->
+				<div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 order-xl-3"> 
+					<div class="row justify-content-left">
+			 			<div class="col">	
+							<p>Skills</p>
+						</div>
+						<div class="w-100"></div>
+						<div class="col">
+							<table class="allskill">
+								<tr>
+									<th>
+										Adobe Photoshop	
+										<div  class="skillbar" data-width="80" data-background="#08dbe3">
+										</div>
+									</th>
+									<th>
+										<img src="img/ps.png">
+									</th>
+								</tr>
+								<tr>
+									<th>
+										Adobe Illustrator
+										<div  class="skillbar" data-width="70" data-background="#08dbe3">
+										</div>
+									</th>
+									<th>
+										<img src="img/ai.png">
+									</th>
+								</tr>
+								<tr>
+									<th>
+										Hand/Tablet Drawing
+										<div  class="skillbar" data-width="90" data-background="#08dbe3">
+									</th>
+									<th>
+										<img src="img/pen.png">
+									</th>
+								</tr>
+								<tr>
+									<th>
+											Lying about skills
+										<div  class="skillbar" data-width="100" data-background="#08dbe3">
+										</div>
+									</th>
+									<th>
+										<img src="img/man.png">
+									</th>
+								</tr>
+							</table>
+						</div> <!-- end of the col -->
+						<div class="w-100"></div>
+						<div class="col">
+							<p>hobbies</p>
+						</div>
+						<div class="w-100"></div>
+						<div class="col">
+							<div class="pics">
+								<div class="row justify-content-around">
+									<div class="col-auto">
+										<img src="img/bike.png" alt="bike" class="hvr-push"></div>
+									<div class="col-auto">
+										<img src="img/music.png" alt="music" class="hvr-push"></div>
+									<div class="col-auto">
+										<img src="img/chess.png" alt="chess" class="hvr-push"></div>
+									<div class="col-auto">
+										<img src="img/drawing.png" alt="drawing" class="hvr-push">
+									</div>
+								</div> <!-- row -->
+							</div> <!-- pics -->
+						</div> <!-- col -->
+					</div> <!-- row -->
+			 	</div> <!-- col -->
+			</div> <!-- row -->
+		</div><!-- container-fluid -->
 	</div><!-- allabout -->
 
-
-
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-	
-	<script src="js/simple-skillbar.js"></script>
-
- 	<script src="js/skill.js"></script>
- 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<script src="js/simple-skillbar.js"></script>
+<script src="js/skill.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   
-	</body>
+</body>
 </html>
