--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 						<div class="col-lg-auto">
 							<div id="education">
 								<p>Education</p>
-								<img class="scaleimg" src="img/info.png" alt="info">
 							</div>
+							<img class="scaleimg" src="img/info.png" alt="info">
 						</div>
 						<div class="w-100"></div>
-						<div class="col-xl-12 col-lg-auto">
+						<div class="col-auto">
 							<table class="experience">
 								<tr>
 									<th>
@@ -153,13 +153,13 @@
 							</table>
 						</div> <!-- end of the col -->
 						<div class="w-100"></div>
-						<div class="col">
+						<div class="col-auto">
 							<p>hobbies</p>
 						</div>
 						<div class="w-100"></div>
 						<div class="col">
 							<div class="pics">
-								<div class="row justify-content-around">
+								<div class="row justify-content-left">
 									<div class="col-auto">
 										<img src="img/bike.png" alt="bike" class="hvr-push"></div>
 									<div class="col-auto">
